syntax = "proto3";

package auth;

option go_package = "./proto";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Validate(ValidateRequest) returns (validateResponse) {}
}

// Register
message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 status = 1;
}

// Login
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string token = 2;
}

// Validate
message ValidateRequest {
    string token = 1;
}

message validateResponse {
    int64 status = 1;
    int64 userId = 2;
}
